Fixed project name in pom xml

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>gr.cti.nts</groupId>
-  <artifactId>keycloak-gsis-govuser</artifactId>
+  <artifactId>keycloak-gsis-providers</artifactId>
   <packaging>jar</packaging>
   <version>1.0.0-SNAPSHOT</version>
 
@@ -230,8 +230,8 @@
   <distributionManagement>
    <repository>
      <id>github</id>
-     <name>GitHub keycloak-gsis-govuser Apache Maven Packages</name>
-     <url>https://maven.pkg.github.com/cti-nts/keycloak-gsis-govuser</url>
+     <name>GitHub keycloak-gsis-providers Apache Maven Packages</name>
+     <url>https://maven.pkg.github.com/cti-nts/keycloak-gsis-providers</url>
    </repository>
 </distributionManagement>
 
