pom.xml: fix missing pluginManagement tag

--- a/pom.xml
+++ b/pom.xml
@@ -19,177 +19,179 @@
 
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.2.0</version>
-        <configuration>
-          <archive>
-            <!-- This is required since we need to add the jboss module references to the resulting
-            jar -->
-            <manifestEntries>
-              <!-- Adding explicit dependencies to avoid class-loading issues at runtime -->
-              <Dependencies>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.2.0</version>
+          <configuration>
+            <archive>
+              <!-- This is required since we need to add the jboss module references to the
+              resulting jar -->
+              <manifestEntries>
+                <!-- Adding explicit dependencies to avoid class-loading issues at runtime -->
+                <Dependencies>
               <![CDATA[org.keycloak.keycloak-common,org.keycloak.keycloak-core,org.keycloak.keycloak-server-spi,org.keycloak.keycloak-server-spi-private,org.keycloak.keycloak-services]]></Dependencies>
-            </manifestEntries>
-          </archive>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          <compilerArgument>-Xlint:unchecked</compilerArgument>
-          <compilerArgument>-Xlint:deprecation</compilerArgument>
-          <useIncrementalCompilation>false</useIncrementalCompilation>
-          <annotationProcessorPaths>
-            <path>
-              <groupId>com.google.auto.service</groupId>
-              <artifactId>auto-service</artifactId>
-              <version>${auto-service.version}</version>
-            </path>
-            <path>
-              <groupId>org.projectlombok</groupId>
-              <artifactId>lombok</artifactId>
-              <version>${lombok.version}</version>
-            </path>
-          </annotationProcessorPaths>
-        </configuration>
-      </plugin>
-      <plugin> <!-- put the git sha in the code -->
-        <groupId>com.fizzed</groupId>
-        <artifactId>fizzed-versionizer-maven-plugin</artifactId>
-        <version>1.0.6</version>
-        <executions>
-          <execution>
-            <id>generate-version-class</id>
-            <goals>
-              <goal>generate</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <javaPackage>${main.java.package}</javaPackage>
-          <versionCommit>${buildNumber}</versionCommit>
-        </configuration>
-      </plugin>
-      <plugin> <!-- pretty up the code using google java standards `mvn fmt:format` -->
-        <groupId>com.coveo</groupId>
-        <artifactId>fmt-maven-plugin</artifactId>
-        <version>2.7</version>
-      </plugin>
-      <plugin> <!-- run the playground server -->
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>3.0.0</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>java</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <classpathScope>test</classpathScope>
-          <includeProjectDependencies>true</includeProjectDependencies>
-          <includePluginDependencies>true</includePluginDependencies>
-          <mainClass>org.keycloak.testsuite.KeycloakServer</mainClass>
-          <arguments>
-            <argument>argument1</argument>
-          </arguments>
-          <systemProperties>
-            <systemProperty>
-              <key>keycloak.bind.address</key>
-              <value>127.0.0.1</value>
-            </systemProperty>
-            <systemProperty>
-              <key>java.net.preferIPv4Stack</key>
-              <value>true</value>
-            </systemProperty>
-            <systemProperty>
-              <key>keycloak.connectionsJpa.url</key>
-              <value>jdbc:h2:file:./data/keycloak_4_x_master</value>
-            </systemProperty>
-            <systemProperty>
-              <key>keycloak.connectionsJpa.driver</key>
-              <value>org.h2.Driver</value>
-            </systemProperty>
-            <systemProperty>
-              <key>keycloak.connectionsJpa.driverDialect</key>
-              <value>org.hibernate.dialect.H2Dialect</value>
-            </systemProperty>
-            <systemProperty>
-              <key>keycloak.connectionsJpa.user</key>
-              <value>sa</value>
-            </systemProperty>
-            <systemProperty>
-              <key>keycloak.connectionsJpa.password</key>
-              <value></value>
-            </systemProperty>
-            <systemProperty>
-              <key>profile</key>
-              <value>COMMUNITY</value>
-            </systemProperty>
-            <systemProperty>
-              <key>product.default-profile</key>
-              <value>COMMUNITY</value>
-            </systemProperty>
-            <systemProperty>
-              <key>keycloak.password.blacklists.path</key>
-              <value>./data/blacklists/</value>
-            </systemProperty>
-            <systemProperty>
-              <key>com.sun.net.ssl.checkRevocation</key>
-              <value>false</value>
-            </systemProperty>
-            <systemProperty>
-              <key>keycloak.product.name</key>
-              <value>xix</value>
-            </systemProperty>
-            <systemProperty>
-              <key>product.name</key>
-              <value>xix</value>
-            </systemProperty>
-            <systemProperty>
-              <key>product.version</key>
-              <value>${keycloak.version}</value>
-            </systemProperty>
-            <systemProperty>
-              <key>keycloak.profile</key>
-              <value>preview</value>
-            </systemProperty>
-            <systemProperty>
-              <key>keycloak.profile.feature.account_api</key>
-              <value>enabled</value>
-            </systemProperty>
-            <systemProperty>
-              <key>keycloak.profile.feature.account2</key>
-              <value>enabled</value>
-            </systemProperty>
-            <systemProperty>
-              <key>keycloak.profile.feature.scripts</key>
-              <value>enabled</value>
-            </systemProperty>
-            <!-- <systemProperty>
+              </manifestEntries>
+            </archive>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+            <compilerArgument>-Xlint:unchecked</compilerArgument>
+            <compilerArgument>-Xlint:deprecation</compilerArgument>
+            <useIncrementalCompilation>false</useIncrementalCompilation>
+            <annotationProcessorPaths>
+              <path>
+                <groupId>com.google.auto.service</groupId>
+                <artifactId>auto-service</artifactId>
+                <version>${auto-service.version}</version>
+              </path>
+              <path>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+              </path>
+            </annotationProcessorPaths>
+          </configuration>
+        </plugin>
+        <plugin> <!-- put the git sha in the code -->
+          <groupId>com.fizzed</groupId>
+          <artifactId>fizzed-versionizer-maven-plugin</artifactId>
+          <version>1.0.6</version>
+          <executions>
+            <execution>
+              <id>generate-version-class</id>
+              <goals>
+                <goal>generate</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <javaPackage>${main.java.package}</javaPackage>
+            <versionCommit>${buildNumber}</versionCommit>
+          </configuration>
+        </plugin>
+        <plugin> <!-- pretty up the code using google java standards `mvn fmt:format` -->
+          <groupId>com.coveo</groupId>
+          <artifactId>fmt-maven-plugin</artifactId>
+          <version>2.7</version>
+        </plugin>
+        <plugin> <!-- run the playground server -->
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>3.0.0</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>java</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <classpathScope>test</classpathScope>
+            <includeProjectDependencies>true</includeProjectDependencies>
+            <includePluginDependencies>true</includePluginDependencies>
+            <mainClass>org.keycloak.testsuite.KeycloakServer</mainClass>
+            <arguments>
+              <argument>argument1</argument>
+            </arguments>
+            <systemProperties>
+              <systemProperty>
+                <key>keycloak.bind.address</key>
+                <value>127.0.0.1</value>
+              </systemProperty>
+              <systemProperty>
+                <key>java.net.preferIPv4Stack</key>
+                <value>true</value>
+              </systemProperty>
+              <systemProperty>
+                <key>keycloak.connectionsJpa.url</key>
+                <value>jdbc:h2:file:./data/keycloak_4_x_master</value>
+              </systemProperty>
+              <systemProperty>
+                <key>keycloak.connectionsJpa.driver</key>
+                <value>org.h2.Driver</value>
+              </systemProperty>
+              <systemProperty>
+                <key>keycloak.connectionsJpa.driverDialect</key>
+                <value>org.hibernate.dialect.H2Dialect</value>
+              </systemProperty>
+              <systemProperty>
+                <key>keycloak.connectionsJpa.user</key>
+                <value>sa</value>
+              </systemProperty>
+              <systemProperty>
+                <key>keycloak.connectionsJpa.password</key>
+                <value></value>
+              </systemProperty>
+              <systemProperty>
+                <key>profile</key>
+                <value>COMMUNITY</value>
+              </systemProperty>
+              <systemProperty>
+                <key>product.default-profile</key>
+                <value>COMMUNITY</value>
+              </systemProperty>
+              <systemProperty>
+                <key>keycloak.password.blacklists.path</key>
+                <value>./data/blacklists/</value>
+              </systemProperty>
+              <systemProperty>
+                <key>com.sun.net.ssl.checkRevocation</key>
+                <value>false</value>
+              </systemProperty>
+              <systemProperty>
+                <key>keycloak.product.name</key>
+                <value>xix</value>
+              </systemProperty>
+              <systemProperty>
+                <key>product.name</key>
+                <value>xix</value>
+              </systemProperty>
+              <systemProperty>
+                <key>product.version</key>
+                <value>${keycloak.version}</value>
+              </systemProperty>
+              <systemProperty>
+                <key>keycloak.profile</key>
+                <value>preview</value>
+              </systemProperty>
+              <systemProperty>
+                <key>keycloak.profile.feature.account_api</key>
+                <value>enabled</value>
+              </systemProperty>
+              <systemProperty>
+                <key>keycloak.profile.feature.account2</key>
+                <value>enabled</value>
+              </systemProperty>
+              <systemProperty>
+                <key>keycloak.profile.feature.scripts</key>
+                <value>enabled</value>
+              </systemProperty>
+              <!-- <systemProperty>
               <key>keycloak.theme.dir</key>
-            <value>theme/</value>
+              <value>theme/</value>
             </systemProperty> -->
-          </systemProperties>
-        </configuration>
-        <dependencies>
-          <dependency> <!-- if you're getting a missing dependency error here, you need to install
-            keycloak from source locally, as this never hits maven central -->
-            <groupId>org.keycloak</groupId>
-            <artifactId>keycloak-testsuite-utils</artifactId>
-            <version>${keycloak.version}</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-    </plugins>
+            </systemProperties>
+          </configuration>
+          <dependencies>
+            <dependency> <!-- if you're getting a missing dependency error here, you need to install
+              keycloak from source locally, as this never hits maven central -->
+              <groupId>org.keycloak</groupId>
+              <artifactId>keycloak-testsuite-utils</artifactId>
+              <version>${keycloak.version}</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 
   <dependencies>
