--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,13 +3,13 @@ name: CI
 on:
   push:
     branches-ignore:
-      - "dependabot/**"
+      - 'dependabot/**'
   pull_request:
   workflow_dispatch:
 
 env:
   FORCE_COLOR: 2
-   
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,3 +24,8 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+      - name: Upload JAR
+        uses: actions/upload-artifact@v3
+        with:
+          name: keycloak-gsis-providers
+          path: target/keycloak-gsis-providers-1.0.0-SNAPSHOT.jar
