pom.xml: fix compiler arguments

--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,10 @@
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
-            <compilerArgument>-Xlint:unchecked</compilerArgument>
-            <compilerArgument>-Xlint:deprecation</compilerArgument>
+            <compilerArgs>
+              <arg>-Xlint:unchecked</arg>
+              <arg>-Xlint:deprecation</arg>
+            </compilerArgs>
             <useIncrementalCompilation>false</useIncrementalCompilation>
             <annotationProcessorPaths>
               <path>
