--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,11 @@ env:
 
 jobs:
   build:
-    name: ${{ matrix.java }}
+    name: Java ${{ matrix.java }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: ['8', '11', '17']
+        java: ['8', '11']
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK
