--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <main.java.package>gr.cti.nts</main.java.package>
     <keycloak.version>18.0.0</keycloak.version>
-    <junit.version>4.8.1</junit.version>
-    <lombok.version>1.18.12</lombok.version>
-    <auto-service.version>1.0-rc7</auto-service.version>
+    <junit.version>4.13.2</junit.version>
+    <lombok.version>1.18.24</lombok.version>
+    <auto-service.version>1.0.1</auto-service.version>
   </properties>
 
   <build>
@@ -24,7 +24,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.2.0</version>
+          <version>3.3.0</version>
           <configuration>
             <archive>
               <!-- This is required since we need to add the jboss module references to the
@@ -40,7 +40,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.1</version>
+          <version>3.10.1</version>
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
@@ -88,7 +88,7 @@
         <plugin> <!-- run the playground server -->
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
-          <version>3.0.0</version>
+          <version>3.1.0</version>
           <executions>
             <execution>
               <goals>
