--- a/pom.xml
+++ b/pom.xml
@@ -81,9 +81,9 @@
           </configuration>
         </plugin>
         <plugin> <!-- pretty up the code using google java standards `mvn fmt:format` -->
-          <groupId>com.coveo</groupId>
+          <groupId>com.spotify.fmt</groupId>
           <artifactId>fmt-maven-plugin</artifactId>
-          <version>2.7</version>
+          <version>2.19</version>
         </plugin>
         <plugin> <!-- run the playground server -->
           <groupId>org.codehaus.mojo</groupId>
