--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,10 +37,11 @@ jobs:
 
       - name: Rename jar file
         run: |
-          mv target/keycloak-gsis-providers-1.0.0-SNAPSHOT.jar target/keycloak-gsis-providers-java-${{ matrix.java }}-1.0.0-SNAPSHOT.jsr
+          mv target/keycloak-gsis-providers-1.0.0-SNAPSHOT.jar target/keycloak-gsis-providers-java-${{ matrix.java }}-1.0.0-SNAPSHOT.jar
 
       - name: Upload jar file
         uses: actions/upload-artifact@v3
         with:
           name: keycloak-gsis-providers-java-${{ matrix.java }}
           path: target/keycloak-gsis-providers-java-${{ matrix.java }}-1.0.0-SNAPSHOT.jar
+          if-no-files-found: error
