--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,11 @@
   "redhat.telemetry.enabled": false,
   "xml.format.maxLineWidth": 100,
   "yaml.format.printWidth": 100,
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": true,
+  },
   "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
+  "java.format.settings.profile": "GoogleStyle",
   "[java]": {
     "editor.defaultFormatter": "redhat.java",
     "editor.formatOnSave": true
