--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,7 @@ updates:
     directory: "/"
     schedule:
       interval: monthly
+  - package-ecosystem: "maven"
+    directory: "/"
+    schedule:
+      interval: monthly
