--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": true
+  },
   "editor.linkedEditing": true,
   "editor.tabSize": 2,
   "editorconfig.generateAuto": false,
@@ -12,9 +15,6 @@
   "redhat.telemetry.enabled": false,
   "xml.format.maxLineWidth": 100,
   "yaml.format.printWidth": 100,
-  "editor.codeActionsOnSave": {
-    "source.organizeImports": true,
-  },
   "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
   "java.format.settings.profile": "GoogleStyle",
   "[java]": {
