CI: drop Java 11
because apparently support for it was dropped on main

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: ['11', '17']
+        java: ['17']
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
