--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - '!dependabot/**'
   pull_request:
   workflow_dispatch:
 
@@ -22,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: ['17']
+        java: ['17', '21']
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
