--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>gr.cti.nts</groupId>
-  <artifactId>keycloak-gsis-providers</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0.0-SNAPSHOT</version>
-
   <name>keycloak-gsis-providers</name>
   <description>This Keycloak plugin adds production and testing identity providers for using GSIS OAuth 2 Services</description>
   <url>https://github.com/cti-nts/keycloak-gsis-providers</url>
+  <version>1.0.0-SNAPSHOT</version>
+  <artifactId>keycloak-gsis-providers</artifactId>
+  <packaging>jar</packaging>
 
   <licenses>
     <license>
@@ -28,7 +27,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <main.java.package>gr.cti.nts</main.java.package>
     <keycloak.version>22.0.5</keycloak.version>
-    <junit.version>4.13.2</junit.version>
     <lombok.version>1.18.30</lombok.version>
     <auto-service.version>1.1.1</auto-service.version>
   </properties>
@@ -48,7 +46,7 @@
               <manifestEntries>
                 <!-- Adding explicit dependencies to avoid class-loading issues at runtime -->
                 <Dependencies>
-              <![CDATA[org.keycloak.keycloak-common,org.keycloak.keycloak-core,org.keycloak.keycloak-server-spi,org.keycloak.keycloak-server-spi-private,org.keycloak.keycloak-services]]></Dependencies>
+              <![CDATA[org.keycloak.keycloak-common,org.keycloak.keycloak-core,org.keycloak.keycloak-server-spi,org.keycloak.keycloak-services]]></Dependencies>
               </manifestEntries>
             </archive>
           </configuration>
@@ -228,12 +226,6 @@
     <dependency>
       <groupId>org.keycloak</groupId>
       <artifactId>keycloak-server-spi</artifactId>
-      <version>${keycloak.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.keycloak</groupId>
-      <artifactId>keycloak-server-spi-private</artifactId>
       <version>${keycloak.version}</version>
       <scope>provided</scope>
     </dependency>
