--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
               <manifestEntries>
                 <!-- Adding explicit dependencies to avoid class-loading issues at runtime -->
                 <Dependencies>
-              <![CDATA[org.keycloak.keycloak-common,org.keycloak.keycloak-core,org.keycloak.keycloak-server-spi,org.keycloak.keycloak-services]]></Dependencies>
+              <![CDATA[org.keycloak.keycloak-common,org.keycloak.keycloak-core,org.keycloak.keycloak-server-spi,org.keycloak.keycloak-server-spi-private,org.keycloak.keycloak-services]]></Dependencies>
               </manifestEntries>
             </archive>
           </configuration>
@@ -226,6 +226,12 @@
     <dependency>
       <groupId>org.keycloak</groupId>
       <artifactId>keycloak-server-spi</artifactId>
+      <version>${keycloak.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.keycloak</groupId>
+      <artifactId>keycloak-server-spi-private</artifactId>
       <version>${keycloak.version}</version>
       <scope>provided</scope>
     </dependency>
